--- a/angular-webapp-pwa/src/index.html
+++ b/angular-webapp-pwa/src/index.html
@@ -15,7 +15,8 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+    <meta name="theme-color" content="#1976d2">
+   <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
   <body>
     <app-root></app-root>
